# geo_stats_backend

./: Cargo.toml  world.ser
src/: geo_guessr.rs  main.rs
src/entities/: comp_team.rs  duels_game.rs  duels_round.rs  fun_team.rs  guess.rs  location.rs  map.rs  mod.rs  player.rs  prelude.rs  session.rs  solo_game.rs  solo_round.rs  team_duels_game.rs  user.rs
src/login/: email.rs  login_request.rs  mod.rs
src/migrator/: m20250420_000001_create_duels_game_table.rs  m20250420_000002_create_duels_round_table.rs  m20250420_000003_create_duels_round_table.rs  m20250420_000003_create_guess_table.rs  m20250420_000004_create_guess_table.rs  m20250420_000004_create_location_table.rs  m20250420_000005_create_location_table.rs  m20250420_000005_create_player_table.rs  m20250420_000006_create_player_table.rs  m20250420_000006_create_solo_game_table.rs  m20250420_000007_create_solo_game_table.rs  m20250420_000007_create_solo_round_table.rs  m20250420_000008_create_solo_round_table.rs  m20250420_000010_create_map_table.rs  m20250420_000011_create_comp_team_table.rs  m20250420_000012_create_session_table.rs  m20250420_000013_create_map_table.rs  m20250420_00008_create_comp_team_table.rs  m20250420_00009_create_fun_team_table.rs  m20250504_000011_create_user_table.rs  mod.rs
src/requests/: country_stats_request.rs  general_stats_requests.rs  geo_login.rs  get_requests.rs  import_games.rs  insertion_requests.rs  mod.rs
