[package]
name = "geo_stats_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.1.10", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "1.1.10"
uuid = { version = "1.16.0", features = ["v4"]}
chrono = "0.4.40"
env_logger = "0.11.8"
reqwest = { version = "0.12.15", features = ["json"] }
log = "0.4.27"
