[package]
name = "geo_stats_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.10.2", features = ["cookies"]}
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.10", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "1.1.10"
uuid = { version = "1.16.0", features = ["v4"]}
chrono = { version = "0.4.41", features = ["clock"]}
env_logger = "0.11.8"
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
log = "0.4.27"
lazy_static = "1.5.0"
tokio = { version = "1.45.0", features = ["full"]}
futures = "0.3.31"
ring = "0.17.14"
resend-rs = "0.15.0"
regex = "1.11.1"
base64 = "0.22.1"
geoutils = "0.5.1"